fix: 💄 overlay z-index order issue fix

--- a/src/components/typeahead_search/typeahead.css
+++ b/src/components/typeahead_search/typeahead.css
@@ -81,6 +81,7 @@
   display: flex;
   justify-content: center;
   transition: 1s all linear;
+  z-index: 1;
 }
 
 .search-list-container {
